# streamlit-executive-dashboard

./: .gitignore  README.md  data_prep.py  dataset_test.py  main.py  pyproject.toml
.streamlit/: config.toml  config_2.toml
dataset/cleaned_dataset/: cordinates.parquet  customers.parquet  orders.parquet  products.parquet
dataset/raw_dataset/: cordinates.csv
