[project]
name = "streamlit-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
    "streamlit-option-menu>=0.4.0",
]
